# wacc

./: .gitignore  Makefile  README.md  compile  run_tests.sh  wacc.cabal
app/: Main.hs
src/: Parser.hs  Types.hs
src/WACC/: CodeGen.hs  Optimizations.hs  Parser.hs  Semantics.hs
src/WACC/CodeGen/: Builtin.hs  Builtins.hs  Emit.hs  EmitARM.hs  Functions.hs  InstructionGen.hs  LinearScanRegisterAlloc.hs  RegisterAllocator.hs  Strings.hs  Types.hs
src/WACC/CodeGen/ARM/: CallingConvention.hs  Emit.hs
src/WACC/Optimizations/: Expressions.hs  Types.hs
src/WACC/Parser/: Parser.hs  Primitives.hs  Semantic.hs  Types.hs
src/WACC/Semantics/: Primitives.hs  Semantics.hs  Simplify.hs  Syntax.hs  Types.hs  Typing.hs
test/: extern.wacc  for-loops.wacc  hex.wacc  inline-assembly.wacc  loopControlStmts.wacc  offsetof.wacc  operators.wacc  pointers.wacc  preprocessor.wacc  preprocessor.wach  struct.wacc  uints.wacc  voidFunctions.wacc
