name:                wacc
version:             0.1.0.0
synopsis:            WACC compiler for group ##
description:         WACC compiler for group ##
homepage:            https://github.com/levex/wacc
license:             BSD3
license-file:        LICENSE
author:              Levente Kurusa, Emma Gospodinova, Daniel Zvara
maintainer:          lk1015@ic.ac.uk
copyright:           2016 (c) L.K, E.G, D.Z (see AUTHORS)
category:            Compilers
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     WACC.Parser
                     , WACC.CodeGen
  other-modules:       WACC.Parser.Types
                     , WACC.Parser.Parser
                     , WACC.Parser.Primitives
                     , WACC.Parser.Semantic
                     , WACC.CodeGen.Types
                     , WACC.Semantics.Semantics
                     , WACC.Semantics.Types
  build-depends:       base >= 4.7 && < 5, containers, parsec
  default-language:    Haskell2010

executable wacc-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , wacc
  default-language:    Haskell2010

test-suite wacc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , wacc
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/levex/wacc
